syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/book/get_by_title_and_author.proto";

service GetBookByTitleAndAuthorService {
  rpc getBookByTitleAndAuthor(com.example.internalapi.request.book.get_by_title_and_author.proto.GetBookByTitleAndAuthorRequest)
      returns (com.example.internalapi.request.book.get_by_title_and_author.proto.GetBookByTitleAndAuthorResponse);
}
